# boxcars

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Pipfile  README.md  appveyor.yml  build.rs
.github/workflows/: rust.yml
assets/: 159a4.replay  3d07e.replay  57a6c.replay  60dfe.replay  65e98.replay  70204.replay  build-coverage.sh  c0bca.replay  e4598.replay  e7fb9.replay  fuzz-list-too-large.replay  fuzz-string-too-long.replay  incomplete-header-data.replay  missing-header-crc.replay  missing-header-data.replay  not_working (4).replay  rdict_array.replay  rdict_bool.replay  rdict_name.replay  text.replay  utf-16-text.replay  utf-16.replay  windows_1252.replay
assets/replays/bad/: fuzz-corpus.replay  fuzz-large-object-id.replay  fuzz-slice-index.replay  fuzz-string-too-long2.replay  fuzz-too-many-frames.replay
assets/replays/good/: 002c.replay  00bb.replay  01d3e5.replay  0e62.replay  128ed.replay  13c2.replay  140a5.replay  181d6.replay  1afa.replay  256.replay  28fd.replay  2974.replay  2b37b.replay  3cdd.replay  436d.replay  4375.replay  4742.replay  52b5.replay  58b2.replay  5f97d.replay  6796.replay  6cc24.replay  70865.replay  72ae1.replay  74936.replay  79ea6.replay  7f79f.replay  8206e.replay  8905.replay  8a26.replay  9065.replay  9ab7.replay  P2_Speed Demon.replay  P2_Spike Drop.replay  b0217.replay  (+48 more)
benches/: bench_boxcars.rs  bench_boxcars_gungraun.rs  boxcars.rs  crc.rs  parser.rs
bitter/: Cargo.toml  README.md
bitter/benches/: bitget.rs  bitreader.rs  bitstream-io.rs  bitter.rs  nom.rs
bitter/src/: lib.rs
boxcapy/: README  requirements-dev.txt  requirements.txt  rocket-plot.py
ci/: before_deploy.ps1  before_deploy.sh  script.sh
examples/: bodies.rs  demo.rs  json.rs  names.rs  ping.rs  property_counter.rs
fuzz/: Cargo.toml
fuzz/corpus/: .gitignore  crc-no-body
fuzz/fuzz_targets/: check-crc.rs  crc-body.rs  crc-no-body.rs  no-check-crc.rs  no-crc-body.rs  no-crc-no-body.rs
rrrocket/: CHANGELOG.md  Cargo.toml
rrrocket/src/: main.rs
src/: attributes.rs  bits.rs  core_parser.rs  crc.rs  data.rs  errors.rs  header.rs  lib.rs  macros.rs  models.in.rs  models.rs  net_parser.rs  network.rs  parser.rs  parsing.rs  parsing_utils.rs  py.rs  serde_utils.rs
src/network/: attributes.rs  frame_decoder.rs  mod.rs  models.rs  object_index.rs  recovery.rs
tests/: frame_roundtrip.rs  integration_tests.rs  not_working_replay_tests.rs  samples.rs
tests/snapshots/: integration_tests__replay_snapshots@002c.replay.snap  integration_tests__replay_snapshots@00bb.replay.snap  integration_tests__replay_snapshots@01d3e5.replay.snap  integration_tests__replay_snapshots@029d.replay.snap  integration_tests__replay_snapshots@07e9.replay.snap  integration_tests__replay_snapshots@0ca5.replay.snap  integration_tests__replay_snapshots@0e62.replay.snap  integration_tests__replay_snapshots@128ed.replay.snap  integration_tests__replay_snapshots@13c2.replay.snap  integration_tests__replay_snapshots@140a5.replay.snap  integration_tests__replay_snapshots@159a4.replay.snap  integration_tests__replay_snapshots@160c.replay.snap  integration_tests__replay_snapshots@16d5.replay.snap  integration_tests__replay_snapshots@181d6.replay.snap  integration_tests__replay_snapshots@1afa.replay.snap  integration_tests__replay_snapshots@1ec9.replay.snap  integration_tests__replay_snapshots@204c.replay.snap  integration_tests__replay_snapshots@21a81.replay.snap  integration_tests__replay_snapshots@2266.replay.snap  integration_tests__replay_snapshots@256.replay.snap  integration_tests__replay_snapshots@28fd.replay.snap  integration_tests__replay_snapshots@2974.replay.snap  integration_tests__replay_snapshots@2b37b.replay.snap  integration_tests__replay_snapshots@3381.replay.snap  integration_tests__replay_snapshots@3bd08.replay.snap  integration_tests__replay_snapshots@3cdd.replay.snap  integration_tests__replay_snapshots@3d07e.replay.snap  integration_tests__replay_snapshots@419a.replay.snap  integration_tests__replay_snapshots@42f2.replay.snap  integration_tests__replay_snapshots@436d.replay.snap  integration_tests__replay_snapshots@4375.replay.snap  integration_tests__replay_snapshots@43a9.replay.snap  integration_tests__replay_snapshots@4742.replay.snap  integration_tests__replay_snapshots@47eb.replay.snap  integration_tests__replay_snapshots@4bc3b.replay.snap  integration_tests__replay_snapshots@51235.replay.snap  integration_tests__replay_snapshots@52b5.replay.snap  integration_tests__replay_snapshots@54aed.replay.snap  integration_tests__replay_snapshots@551c.replay.snap  integration_tests__replay_snapshots@57a6c.replay.snap  (+102 more)
(+8 files in other folders)
