[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
name = "boxcars"
readme = "README.md"
edition = "2021"
repository = "https://github.com/nickbabcock/boxcars"
description = "Rocket league replay parser"
keywords = ["rocket-league"]
categories = ["parsing"]
version = "0.10.8"
include = ["src/**/*.rs", "Cargo.toml", "build.rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
encoding_rs = "0.8"
phf = { version = "0.13", features = ["macros"] }
fnv = "1.0"
bitter = "0.8"

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
insta = { version = "1.39.0", features = ["glob", "serde", "json"] }
highway = "1.3.0"

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
path = "benches/bench_boxcars.rs"
name = "bench_boxcars"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
ryu.opt-level = 3
serde_json.opt-level = 3
highway.opt-level = 3
