[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
name = "boxcars"
readme = "README.md"
edition = "2021"
repository = "https://github.com/nickbabcock/boxcars"
description = "Rocket league replay parser"
keywords = ["rocket-league"]
categories = ["parsing"]
version = "0.11.0"
include = ["src/**/*.rs", "Cargo.toml", "build.rs"]

[dependencies]
bitter = "0.9"
encoding_rs = "0.8"
fnv = "1.0"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.8"
gungraun = "0.17.2"
highway = "1.3.0"
insta = { version = "1.47.0", features = ["glob", "serde", "json"] }
serde_json = "1"

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
path = "benches/bench_boxcars.rs"
name = "bench_boxcars"
harness = false

[[bench]]
path = "benches/bench_boxcars_gungraun.rs"
name = "bench_boxcars_gungraun"
harness = false

# Execute tests with some optimizations as the test suite
# has gotten large this basic optimization drop the time
# from 43s to 4.3s, a 10x improvement
[profile.test]
opt-level = 1

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
serde_json.opt-level = 3
highway.opt-level = 3
