[package]
name = "bitter"
version = "0.1.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Swiftly extracts unaligned bit-level data from a byte slice"
repository = "https://github.com/nickbabcock/boxcars"
readme = "README.md"
keywords = ["bitstream", "little-endian"]
categories = ["parsing"]
license = "MIT"

[dependencies]
byteorder = "1"

[[bench]]
name = "bitget"
harness = false

[[bench]]
name = "bitreader"
harness = false

[[bench]]
name = "bitstream-io"
harness = false

[dev-dependencies]
criterion = "0.2"
bitreader = "0.3.1"
bitstream-io = "0.6"
