[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
name = "rrrocket"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/nickbabcock/boxcars"

[dependencies]
structopt = "0.1.0"
structopt-derive = "0.1.0"
serde_json = "1.0.4"
error-chain = "0.11.0"
boxcars = { path = "..", version = "0.1" }
