[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
name = "rrrocket"
repository = "https://github.com/nickbabcock/boxcars"
version = "0.2.0"

[dependencies]
failure = "0.1.1"
serde_json = "1.0.6"
structopt = "0.1.5"
structopt-derive = "0.1.5"
rayon = "0.9"
boxcars = "0.2"
globset = "0.2"
